# cloudwatch-log-group-enforcer

./: .gitignore  Makefile  README.md  buildspec.yml  package.sh  pyproject.toml  run.py
ci/: codepipeline.yml
ci/scripts/: build.sh
cloudwatch-log-group-enforcer/: main.py
cloudwatch_log_group_enforcer/: accounts.yml  main.py
cloudwatch_log_group_enforcer/accounts/: get_accounts_to_inspect.py
cloudwatch_log_group_enforcer/utils/: assume_role.py
scripts/: pipeline.sh
stacks/: infrastructure.yml
stacks/accounts-janitor-account/: infrastructure.yml
stacks/accounts-janitor-account/parameters/: infrastructure.json
stacks/management-account/: deploy.sh  log-group-enforcer-role.yml
